samples/_failures_safe/1761354933_29d18a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10ec74cb.c: In function ‘main’:
./samples/SAFE/__tmp_10ec74cb.c:147:12: error: missing terminating " character
  147 |     printf("From node 0 to node 5:\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_10ec74cb.c:147:5: error: expected expression at end of input
  147 |     printf("From node 0 to node 5:\n
      |     ^~~~~~
./samples/SAFE/__tmp_10ec74cb.c:147:5: error: expected declaration or statement at end of input
